--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a basic streak counter - inspired by DuoLingo - written in TypeScript and meant for the browswer (uses `localStorage`).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/queuebit/streak-counter#readme",
   "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   }
 }
