--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "streak-counter",
-  "version": "1.0.0",
+  "name": "@queuebit/streak-counter",
+  "version": "0.0.1",
   "description": "This is a basic streak counter - inspired by DuoLingo - written in TypeScript and meant for the browswer (uses `localStorage`).",
-  "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "build": "microbundle",
+    "dev": "microbundle watch",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/queuebit/streak-counter.git"
+    "url": "https://github.com/queuebit/streak-counter.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "type": "module",
+  "types": "./dist/index.d.ts",
+  "source": "src/index.ts",
+  "exports": {
+    "require": "./dist/index.cjs",
+    "default": "./dist/index.modern.js"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.module.js",
+  "unpkg": "./dist/index.umd.js",
   "bugs": {
     "url": "https://github.com/queuebit/streak-counter/issues"
   },
@@ -22,6 +33,7 @@
     "@types/jsdom": "^20.0.1",
     "jest": "^29.3.1",
     "jsdom": "^20.0.3",
+    "microbundle": "^0.15.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   }
