--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -7,11 +7,10 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: "18"
+          node-version: "14"
       - run: yarn install
       - run: yarn test
       - run: yarn build
       - uses: JS-DevTools/npm-publish@v1
         with:
-          token: $
-          access: "public"
+          token: ${{ secrets.NPM_TOKEN }}
